--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@ header-img: "img/about-bg.jpg"
 multilingual: true
 ---
 
+{% include head-baidu.html %}
 <!-- Language Selector -->
 <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
     <option value="0" selected> 中文 Chinese </option>
