--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "我干了什么 究竟拿了时间换了什么"
+description: "路 在脚下！"
 ---
 {% include head-baidu.html %}
 {% for post in paginator.posts %}
