--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@ layout: default
 title: 404
 hide-in-nav: true
 description: "你来到了没有知识的荒原 :("
-header-img: "/img/404-bg.jpg?Expires=1539770529&OSSAccessKeyId=TMP.AQF8F67Z83mPEMZyxGvMqahG6Qqrwa9SF8U176rlsBFdlKdVVEz26PolpbYpADAtAhQtWTPozbImCg8gkGR4fHDruj4-DgIVALNA5IuvBKoJDH5wCxg1LU_THoKY&Signature=%2BqEL0QfA%2FQyEanUm6RScHpfu56I%3D"
+header-img: "/img/404-bg.jpg"
 permalink: /404.html
 ---
 
